--- a/NamesToFaces.Project10/Base.lproj/Main.storyboard
+++ b/NamesToFaces.Project10/Base.lproj/Main.storyboard
@@ -48,6 +48,10 @@
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="rgV-YA-EqN"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ahD-2v-BUU"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
