--- a/NamesToFaces.Project10/Base.lproj/Main.storyboard
+++ b/NamesToFaces.Project10/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Gqc-u4-dGC">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Gqc-u4-dGC">
                                 <rect key="frame" x="0.0" y="51" width="600" height="536"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WZc-tg-okY">
                                     <size key="itemSize" width="140" height="180"/>
@@ -59,6 +59,12 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Gqc-u4-dGC" secondAttribute="trailing" id="Vib-22-6XM"/>
+                            <constraint firstItem="Gqc-u4-dGC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hla-XS-UQP"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Gqc-u4-dGC" secondAttribute="bottom" constant="13" id="u7X-me-PSm"/>
+                            <constraint firstItem="Gqc-u4-dGC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="51" id="vY1-D5-BkM"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wO8-qn-4Vd"/>
                 </viewController>
