--- a/NamesToFaces.Project10/Base.lproj/Main.storyboard
+++ b/NamesToFaces.Project10/Base.lproj/Main.storyboard
@@ -67,6 +67,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wO8-qn-4Vd"/>
+                    <connections>
+                        <outlet property="collectionView" destination="Gqc-u4-dGC" id="kNM-Dy-oL9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
